[package]
name = "smitten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28"
glow = "0.11"
thiserror = "1.0"
png = "0.17.6"
fontdue = "0.7.2"

[dependencies.image]
version = "0.23"
features = ["png"]
default-features = false
